--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
 .top-img{
     width: 100%;
 }
+.top-img:hover{transform: rotate(60deg);}
 .button{
     text-decoration: none;
     background-color: #E02C6D;
@@ -87,6 +88,7 @@ text-decoration: none;
                display: grid;
                grid-template-columns: repeat(1,1fr);          
             }
+            .top-img:hover{transform: rotate(60deg);}
             .top-section img{
                 width: 100%;
             }
@@ -114,6 +116,7 @@ text-decoration: none;
             display: grid;
             grid-template-columns: repeat(2,1fr);
         }
+        .top-img:hover{transform: rotate(60deg);}
         .company-logo{
             display: grid;
             grid-template-columns: repeat(7,1fr);}
@@ -130,6 +133,7 @@ text-decoration: none;
             .social-logo>i{
                 font-size: 40px;
             }
+
    
     }
     /*----------------------- For  Medium to Big Screen ---------------*/
@@ -138,6 +142,7 @@ text-decoration: none;
             display: grid;
             grid-template-columns: repeat(2,1fr);
         }
+        .top-img:hover{transform: rotate(60deg);}
         .company-logo{
             display: grid;
             grid-template-columns: repeat(7,1fr);}
