--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@ body{
 .moto{
     margin: 0px;
 }
-
+.moto>img{
+    width: 50%;
+}
 .top-section{
     display: grid;
     grid-template-columns: repeat(2,1fr);
